import org.apache.tools.ant.filters.ReplaceTokens

plugins {
    id 'java'
    id 'com.gradleup.shadow' version '9.6.1'
}

group 'kr.kubecity'
version '4.0.1'

repositories {
    maven {
        name = 'spigotmc-repo'
        url = 'https://hub.spigotmc.org/nexus/content/groups/public/'
    }
    maven {
        name = 'sonatype'
        url = 'https://oss.sonatype.org/content/groups/public/'
    }
    maven {
        name = 'jitpack'
        url = 'https://jitpack.io'
    }
    maven {
        name 'm2-dv8tion'
        url 'https://m2.dv8tion.net/releases'
    }
    mavenCentral()
}

dependencies {
    compileOnly "org.spigotmc:spigot-api:26.2-R0.1-SNAPSHOT"

    implementation "net.dv8tion:JDA:6.5.0"
    implementation "club.minnced:discord-webhooks:0.8.4"
    compileOnly "com.github.RanolP:RatTranslate:v1.1.0"
    compileOnly 'net.luckperms:api:5.5'

    testImplementation 'junit:junit:4.13.1'
}

processResources {
    duplicatesStrategy = DuplicatesStrategy.INCLUDE
    from(sourceSets.main.resources.srcDirs) {
        filteringCharset = 'UTF-8'
        filter ReplaceTokens, tokens: [version: project.version]
    }
}

artifacts {
    archives shadowJar
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
}